--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/LauraElenaPopescu/Learning/issues"
   },
-  "homepage": "https://github.com/LauraElenaPopescu/Learning#readme"
+  "homepage": "https://github.com/LauraElenaPopescu/Learning#readme",
+  "dependencies": {
+    "hapi": "^18.1.0",
+    "mongodb": "^2.2.36",
+    "python3": "0.0.1",
+    "typescript": "^3.8.3"
+  }
 }
